fixed payment contract by adding solana stub while making the repo implentation payment agnostic
